force-app/main/default/objects/BMCServiceDesk__BMC_IPEndpoint__c/BMCServiceDesk__BMC_IPEndpoint__c.object-meta.xml
<CustomObject>
    <description>BMC_IPEndpoint: CMDB Class stores information about communication endpoints dedicated to running IP.   This class corresponds to the DMTF CIM_IPProtocolEndpoint class.</description>
    <label>IP Endpoint</label>
    <nameField>
        <label>BMC_IPEndpoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Endpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>