force-app/main/default/objects/BMCServiceDesk__BMC_IPEndpoint__c/fields/BMCServiceDesk__DNSHostName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DNSHostName__c</fullName>
    <label>DNS Host Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>