force-app/main/default/objects/BMCServiceDesk__BMC_IPEndpoint__c/fields/BMCServiceDesk__ManagementAddress__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ManagementAddress__c</fullName>
    <label>Management Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>